--- a/Ap 7_13 Application/index.css
+++ b/Ap 7_13 Application/index.css
@@ -611,3 +611,111 @@ footer .copyright {
     color: var(--color-white);
     border-top:1px solid var(--color-light) ;
 }
+
+@media screen and (max-width: 1024px){
+    h1{
+        font-size: 4.4rem;
+        letter-spacing: 1px;
+    }
+
+    h2{
+        font-size: 2.7rem;
+        letter-spacing: -1px;
+    }
+
+    h3{
+        font-size: 2.2rem;
+    } 
+
+    h4{
+        font-size: 1.2rem;
+    }
+    
+    h5{
+        font-size: 0.9rem;
+    }
+
+    p{
+        line-height: 1.6rem;
+        font-size: 0.9rem;
+    }
+
+    .container{
+        width: var(--mobile-width);
+    }
+
+    section{
+        overflow-x:hidden;
+    }
+
+    nav .container{
+        width: 100%;
+    }
+
+    nav .container .logo{
+        margin-left: 1rem;
+    }
+
+    nav .container ul{
+        position: fixed;
+        top: 0;
+        left: 0;
+        flex-direction: column;
+        width: 16rem;
+        height: 100vh;
+        background-color: var(--color-primary);
+        box-shadow: 1rem 0 2rem;
+        z-index: 3;
+    }
+
+    nav .container ul li{
+        height: 4.6rem;
+        display: flex;
+        align-items: center;
+        /* background-color: rgb(0, 255, 4); */
+    }
+
+    nav .container ul li a{
+        /* background-color: aqua; */
+        width: 100%;
+        padding:  1rem 2rem;
+    }
+
+    nav .container ul li a:hover{
+        font-size: 1.3rem;
+    }
+
+    nav button{
+        display: inline-block;
+        cursor: pointer;
+        background: transparent;
+        color: var(--color-black);
+        margin-right: 2rem;
+        font-size: 1.6rem;
+    }
+
+    nav button.close-btn{
+        display: none;
+    }
+
+    header{
+        top: 7rem;
+        height: 100%;
+    }
+
+    header .container{
+        grid-template-columns: 1fr 1fr;
+        gap: 0;
+        margin-top: 0;
+    }
+
+    header .container .details{
+        display: none;
+    }
+
+    section#products .container{
+        width: var(--mobile-width);
+    }
+
+    
+}
